# static_symbols_problem

./: CMakeLists.txt  lib_a.cpp  lib_a.h  lib_b.cpp  lib_b.h  main.cpp  useful.h
